# maxflow_algorithms

./: .gitignore  CMakeLists.txt  README.md  assemble_bench.py  bench.cpp  bench_config.json  bench_config_gridcut.json  bench_config_parallel.json  bench_config_serial.json  bench_io.cpp  demo.cpp  graph_io.cpp  graph_io.h  graph_io.py  unified_demo.cpp  unified_interface_serial.h
prd/: CMakeLists.txt  LICENSE.txt
prd/code/: assert.h  defs.h
prd/code/d_maxflow/: CMakeLists.txt  PRD.cpp  PRD.h  README.txt  array_buckets.h  base_graph.h  cut_cost.cpp  dimacs_parser.cpp  dimacs_parser.h  get_solver.cpp  get_solver.h  hpr1.cpp  hpr1.h  maxflow_BK.cpp  maxflow_BK.h  maxflow_GT.cpp  maxflow_GT.h  maxflow_HPR.cpp  maxflow_HPR.h  maxflow_solver.cpp  maxflow_solver.h  parallel_ARD1.cpp  parallel_ARD1.h  parallel_PRD.cpp  parallel_PRD.h  parallel_discharge.cpp  parallel_discharge.h  region_discharge.cpp  region_discharge.h  region_graph.cpp  region_graph.h  region_splitter.cpp  region_splitter.h  region_splitter2.cpp  region_splitter2.h  seed_BK1.cpp  seed_BK1.h  seed_buckets.cpp  seed_buckets.h  seed_hi_pr.cpp  (+11 more)
prd/code/data/: dataset.cpp  dataset.h  grid_topology.h  indexset.h
prd/code/debug/: except.h  logs.cpp  logs.h  msvcdebug.cpp  msvcdebug.h  performance.cpp  performance.h
prd/code/dynamic/: array_allocator.h  basic_heap.h  block_allocator.cpp  block_allocator.h  buffer.h  dynamic.h  dynamic_array1.h  fixed_array1.h  fixed_array2.h  fixed_vector.h  grow_vector.h  mallocator.h  num_array.cpp  num_array.h  static_allocator.h
prd/code/exttype/: arrayn.h  arrays.h  convolution.h  exttype.h  fixed_vect.h  intn.h  itern.h  ivector.h  key_less.h  minmax.h  pvect.cpp  pvect.h
prd/code/files/: xfs.cpp  xfs.h
prd/code/geom/: Zn.h  geom.h  imatrix.h  math.cpp  math.h  nmmatrix.h  vectn.cpp  vectn.h
prd/code/geom/grid/: grid.cpp  grid.h
prd/code/geom/p2geometry/: hpoly.h  p2geometry.cpp  p2geometry.h
prd/code/geom/r1geometry/: r1geometry.cpp  r1geometry.h
prd/code/geom/r2geometry/: convexpoly.h  inthpolyrasterizer.cpp  inthpolyrasterizer.h  r2geometry.cpp  r2geometry.h  r2grid.cpp  r2grid.h  vect2.cpp  vect2.h
prd/code/geom/r3geometry/: flatpoly.h  r3geometry.cpp  r3geometry.h  r3grid.cpp  r3grid.h  vect3.cpp  vect3.h
prd/code/geom/transform/homography/: homography.cpp  homography.h  hsolver.cpp  hsolver.h  hvect.cpp  hvect.h  p3transform.cpp  p3transform.h
prd/code/hi_pr/: README  construct.cpp  hi_pr.cpp  hi_pr.h  hi_pr_main.cpp  parser.cpp  timer.cpp  timer.h
prd/code/maxflow/: DOWNLOAD.txt  graph.h  instances.inc  maxflow.cpp
prd/code/maxflow-v3.0/: CHANGES.TXT  Doxyfile  README.TXT  graph.cpp  graph.h  instances.inc  maxflow.cpp
prd/code/maxflow-v3.0/doc/html/: annotated.html  block_8h-source.html  block_8h.html  class_block-members.html  class_block.html  class_d_block-members.html  class_d_block.html  (+47 more)
prd/code/mtmaxflow/: README.txt  make.m  maxflow_dd.cpp  maxflow_dd.h  mtmaxflow.vcproj  startup.m
prd/code/mtmaxflow/demo/: fig8.m  segmentation.m
prd/code/mtmaxflow/graph_tools/: README.txt  cut_delta.m  draw_graph.m  draw_graph3D.m  edges3D.m  edges4connected.m  edges8connected.m  plot_contour.m  test_2D.m  test_3D.m
prd/code/mtmaxflow/split-cpp/: cppmatrix.h  maxflowmulti.cpp  maxflowmultiint.cpp  maxflowsingle.cpp  maxflowsingleint.cpp  mextiming.h  mexutils.h  parallelmaxflow.cpp  parallelmaxflow.h
prd/code/streams/: advstreaming.cpp  advstreaming.h  binary_stream.cpp  binary_stream.h  file_stream.cpp  file_stream.h  text_stream.cpp  text_stream.h  virtual_stream.cpp  virtual_stream.h  xstringstream.cpp  xstringstream.h
prd/matlab/d_maxflow/: clear_cache.m  collect_parallel.m  collect_reports.m  collect_streaming.m  data.m  get_reports.m  parallel_competition.m  plot_sweeps_vs_regions.m  plot_time_cpus.m  print_i.m  print_size.m  print_size2.m  print_time.m  read_report.m  rnd_plots.m  rrename.m  sim_eci.m  solve_all.m  sweeps_vs_regions.m  test.m
prd/matlab/mtools/: argmax.m  cc.m  col.m  conv2_gauss.m  cross2.m  dirr.m  eci.m  file_ext.m  file_name.m  file_path.m  fixpath.m  force_path.m  full_path.m  gauss_f1.m  get_cell_field.m  invcum.m  kron3.m  lin_size.m  logsumexp.m  lstrtrim.m  maccumarray.m  madd.m  maddpath.m  meanci.m  medit.m  mind.m  mmax.m  mmean.m  mmin.m  mminus.m  mpath.m  mrange.m  mselect.m  msize.m  msparse.m  msub.m  msub2ind.m  msum.m  msystem.m  multi_ind2sub.m  (+20 more)
prd/matlab/mtools/deprecated/: inv_mon.m
prd/matlab/mtools/img/: bbox.m  cfigure.m  clip_bd.m  color_nans.m  colormap_sq_metric.m  conv1_gauss.m  conv2_gauss.m  conv2_sep.m  conv2same.m  conv3_gauss.m  cumwin.m  density_gmmd1_ml.m  density_gmmd2_ml.m  fbox.m  ffit.m  gauss_filter_d.m  gray2rgb.m  hist2i.m  histi.m  im2gray.m  im2rgb.m  im2v.m  imagesc_g.m  imagesc_j.m  imcapture.m  imcrop.m  jetim.m  meanwin.m  mgriddata.m  minterp2.m  minverse.m  mmeshgrid.m  mmontage.m  mrgb2ind.m  pad_bd.m  pad_bd_copy.m  pdffig.m  prect.m  prescale.m  printfig.m  (+4 more)
prd/projects/: cflags  lflags
prd/projects/d_maxflow/: CMakeLists.txt  Makefile  README.txt  UpgradeLog.htm  cfg.h.in  cut_cost.cbp  cut_cost.vcproj  cut_cost.vcxproj  d_maxflow.cbp  d_maxflow.cdb.workspace  d_maxflow.makefile  d_maxflow.sln  d_maxflow.vcproj  d_maxflow.vcxproj  d_maxflow_ar.bat  d_maxflow_dirs.txt  d_maxflow_dirs_exclude.txt  index.html  maxflow_BK.cbp  maxflow_BK.makefile  maxflow_BK.vcproj  maxflow_BK.vcxproj  maxflow_DD.cbp  maxflow_DD.makefile  maxflow_DD.vcproj  maxflow_DD.vcxproj  maxflow_GT.cbp  maxflow_GT.makefile  maxflow_GT.vcproj  maxflow_GT.vcxproj  solve_dimacs.cbp  solve_dimacs.makefile  solve_dimacs.vcproj  solve_dimacs.vcxproj  solve_random.cbp  solve_random.makefile  solve_random.vcproj  solve_random.vcxproj
prd/projects/d_maxflow/Backup/: d_maxflow.sln
prd/projects/exttype/: exttype.cbp  exttype.vcproj  exttype.vcxproj  exttype.vcxproj.filters  makefile  mexopts1.sh
sk/: CMakeLists.txt  parallelmaxflow.cpp  parallelmaxflow.h
sppr/: CMakeLists.txt  IO.h  gettime.h  graph.h  graphIO.h  maxFlow.cpp  maxFlow.h  maxFlowTime.cpp  parallel.h  sequence.h  utils.h
(+44 files in other folders)
