add_library(d_maxflow
dimacs_parser.cpp
get_solver.cpp
maxflow_BK.cpp
maxflow_GT.cpp
maxflow_HPR.cpp
maxflow_solver.cpp
parallel_ARD1.cpp
parallel_discharge.cpp
parallel_PRD.cpp
PRD.cpp
region_discharge.cpp
region_graph.cpp
region_splitter.cpp
seed_BK1.cpp
seed_buckets.cpp
seed_hi_pr.cpp
sequential_discharge.cpp
stream_ARD1.cpp
stream_PRD.cpp
)

add_library(maxflow_BK 
maxflow_BK.cpp 
maxflow/graph.cpp 
maxflow/maxflow.cpp
maxflow/instances.inc)

add_library(maxflow_GT
maxflow_GT.cpp
hi_pr/hi_pr.cpp
hi_pr/construct.cpp
hi_pr/parser.cpp
hi_pr/timer.cpp)